Fix word wrapping and select all formmatting for mobile

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ code {
   max-width: 800px;
   padding-top: 100px;
   padding-bottom: 100px;
+  word-wrap: break-word;
 }
 
 label {
